--- a/package.json
+++ b/package.json
@@ -21,29 +21,30 @@
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "ngx-ui-tour-md-menu": "7.0.0"
+    "ngx-ui-tour-core": "^8.0.0",
+    "ngx-ui-tour-md-menu": "^7.0.2",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.16",
     "@angular/cli": "^12.2.16",
     "@angular/compiler-cli": "^12.2.16",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.3",
-    "codelyzer": "^6.0.0",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.43",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.13",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
     "ts-node": "^8.3.0",
     "tslint": "^6.1.0",
-    "typescript": "^4.1.6"
+    "typescript": "4.3.3"
   }
 }
